--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 ---
 title: Mi sitio web sencillo
 description: Página creada con Jekyll y GitHub Pages
-theme: minima
+remote_theme: pages-themes/leap-day@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 ---
